# app-rust-nuxt-store

./: .gitignore  LICENSE  PRODUCT_IMAGES_README.md  README.md  docker-compose.yml
api_rust_loco/: .gitignore  Cargo.toml  PRODUCT_IMAGES_README.md
api_rust_loco/config/: development.yaml  test.yaml
api_rust_loco/examples/: playground.rs
api_rust_loco/locales/: en.json  es.json  pt-BR.json
api_rust_loco/migration/src/: lib.rs  m20250711_185419_posts.rs  m20250713_001217_posts.rs  m20250713_052254_profiles.rs  m20250713_094714_categories.rs  m20250713_094959_add_parent_to_categories.rs  m20250719_064242_products.rs  m20250816_043653_product_images.rs  m20260510_075327_product_variants.rs  m20260510_075525_variant_options.rs  m20260510_075752_product_variant_options.rs  m20260510_080449_carts.rs  m20260510_080646_cart_items.rs  m20260510_080646_orders.rs  m20260510_080836_order_items.rs  m20260510_081027_payment_methods.rs  m20260510_081222_payments.rs  m20260510_081746_addresses.rs  m20260510_081958_shipping_methods.rs  m20260510_082152_shipments.rs  m20260510_082918_coupons.rs  m20260510_083114_coupon_usages.rs  m20260510_083315_reviews.rs  m20260510_083524_wishlists.rs  m20260510_101510_alter_order_items_product_variant_nullable.rs  m20260513_223617_create_roles_and_users_roles.rs  m20260516_000001_add_performance_indexes.rs  m20260517_072928_banner_positions.rs  m20260517_073000_normalize_banner_positions.rs  m20260517_073137_banners.rs  m20260517_073909_banner_events.rs  m20260517_203700_add_catalog_lookup_indexes.rs  m20260517_211000_add_controller_query_indexes.rs  m20260519_000001_payment_gateway_domain.rs  m20260519_064033_payment_gateways.rs  m20260519_064100_expand_payment_methods_for_gateways.rs  m20260519_064101_payment_method_countries.rs  m20260519_064102_payment_method_currencies.rs  m20260519_064103_gateway_customers.rs  m20260519_064104_payment_sources.rs  (+20 more)
api_rust_loco/src/: app.rs  cache.rs  lib.rs  openapi.rs  utils.rs
api_rust_loco/src/controllers/: address.rs  admin_audit_logs.rs  admin_emails.rs  admin_inventory.rs  admin_payment_gateways.rs  admin_payment_methods.rs  admin_payment_refunds.rs  admin_payments.rs  admin_rbac.rs  admin_settings.rs  (+20 more)
(+524 files in other folders)
