[workspace]

[package]
name = "api_rust_loco"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "api_rust_loco-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.15" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.33.0", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1.74" }
axum = { version = "0.8.1", features = ["multipart"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
regex = { version = "1.11.1" }
migration = { path = "migration" }
sea-orm = { version = "1.1.0", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-ipnetwork",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6.0", features = ["v4"] }
include_dir = { version = "0.7" }
fakeit = "1.3.0"
rand = "0.9.1"
rust_decimal = { version = "1.37.2", features = ["serde-with-float"] }
ipnetwork = "0.20"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
rust-i18n = "4.0.0"
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"

# -- Utils
urlencoding = "2.1"
unicode-normalization = "0.1.25"
ammonia = "4.1.2"
printpdf = "0.9.1"
zip = "2"
axum-extra = { version = "0.10.0", features = ["cookie"] }
time = "0.3"
moka = { version = "0.12", features = ["sync"] }

[[bin]]
name = "api_rust_loco-cli"
path = "src/bin/main.rs"
required-features = []

[profile.release]
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"
codegen-units = 1

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.21.0" }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
